# devtale-core

./: .gitmodules  CMakeLists.txt  Folder.DotSettings  README.md  ansistring.cpp  devtale-core.cpp  devtale-core.h  jsonrpc.hpp  memory.h  packet_handler.cpp  packet_handler.h  utils.hpp
.github/workflows/: build.yml  cmake.yml
src/: ansistring.h  devtale-core.cpp  devtale-core.h  inputbox.cpp  inputbox.h  jsonrpc.hpp  loader.cpp  loader.rc  memory.cpp  packet_handler.cpp  packet_handler.h  protocol.cpp  protocol.h  resource.h  utils.cpp  utils.h  websocket_handler.cpp  websocket_handler.h
